--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>5.4.13.Final</version>
 		</dependency>
+		
+		<dependency>
+<groupId>org.hibernate</groupId>
+<artifactId>hibernate-java8</artifactId>
+<version>5.4.10.Final</version>
+</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
